--- a/src/index.css
+++ b/src/index.css
@@ -413,6 +413,7 @@ Stripe Styles
   height: 95vh;
   max-width: var(--fixed-width);
   background: rgba(69, 123, 157, 0.9);
+
   border-radius: var(--radius);
   box-shadow: var(--dark-shadow);
   position: relative;
@@ -535,4 +536,152 @@ Stripe Styles
 .submenu-center svg {
   color: var(--clr-grey-5);
   margin-right: 1rem;
+}
+
+.tempbanner {
+  margin: 50px;
+  padding: 30px;
+  background-color: brown;
+}
+
+.banner {
+  width: 100%;
+}
+
+.guitar {
+  margin: 50px;
+  padding: 30px;
+  background-color: transparent;
+}
+
+.guitars {
+  width: 180%;
+  margin-left: 2px;
+}
+
+.guitar-section {
+  content: "";
+  /* position: absolute; */
+  width: 100%;
+  height: 65vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(29, 53, 87, 0.99);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.guitar-sale {
+  text-align: center;
+  color: aliceblue;
+  margin-bottom: 100px;
+}
+
+@media screen and (max-width: 1500px) {
+  .guitars {
+    width: 190%;
+    margin-left: 25px;
+  }
+  .guitar-sale {
+    text-align: center;
+    color: aliceblue;
+    margin-bottom: 100px;
+  }
+  .guitar-section {
+    height: 57vh;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .guitars {
+    width: 190%;
+    margin-left: 25px;
+  }
+  .guitar-sale {
+    text-align: center;
+    color: aliceblue;
+    margin-bottom: 100px;
+  }
+  .guitar-section {
+    height: 52vh;
+  }
+}
+/* 
+@media screen and (max-width: 1024px) {
+  .guitars {
+    width: 190%;
+    margin-left: 25px;
+  }
+  .guitar-sale {
+    text-align: center;
+    color: aliceblue;
+    margin-bottom: 100px;
+  }
+  .guitar-section {
+    height: 68vh;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .guitars {
+    width: 190%;
+    margin-left: 25px;
+  }
+  .guitar-sale {
+    text-align: center;
+    color: aliceblue;
+    margin-bottom: 100px;
+  }
+  .guitar-section {
+    height: 60vh;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .guitars {
+    width: 190%;
+    margin-left: 25px;
+  }
+  .guitar-sale {
+    text-align: center;
+    color: aliceblue;
+    margin-bottom: 100px;
+  }
+  .guitar-section {
+    height: 56vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  .guitars {
+    width: 190%;
+    margin-left: 25px;
+  }
+  .guitar-sale {
+    text-align: center;
+    color: aliceblue;
+    margin-bottom: 100px;
+  }
+  .guitar-section {
+    height: 53vh;
+  }
+}
+ */
+.slick-prev {
+  left: -52px !important;
+}
+
+.slick-next:before,
+.slick-prev:before {
+  content: "" !important;
+}
+.next-slick-arrow,
+.prev-slick-arrow {
+  color: #000000;
+  font-size: 48px;
+}
+.next-arrow,
+.prev-arrow {
+  color: #000000;
+  font-size: 38px;
 }
