--- a/src/index.css
+++ b/src/index.css
@@ -692,13 +692,20 @@ Stripe Styles
   position: relative;
   width: 100%;
   min-height: 100vh;
-  padding: 18rem;
+  padding-top: 18rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
+  /*  resize: horizontal;
+  overflow: auto; */
+}
+
+.post-container {
+  display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
-  resize: horizontal;
-  overflow: auto;
+  margin-left: 2rem;
 }
 /* 
 https://www.w3schools.com/cssref/css3_pr_resize.asp
@@ -717,3 +724,261 @@ https://stackoverflow.com/questions/19213712/my-website-mess-up-with-browser-res
   justify-content: space-around;
 }
 } */
+
+.stand-up {
+  animation-name: guitar-stand-up;
+}
+
+@keyframes guitar-stand-up {
+  0% {
+    transform: hange(in, left, edge, 20000px, null);
+  }
+  30% {
+    transform: hinge(in, left, edge, 20000px, null);
+  }
+  100% {
+    transform: hinge(in, bottom, center, 20000px, from-back);
+  }
+}
+
+/* 
+// home-page guitar animation
+
+https://github.com/foundation/motion-ui/blob/master/docs/animations.md
+https://zurb.com/playground/motion-ui
+*/
+
+/* Footer!!!!!!! */
+/* 
+.footer-section {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  margin-top: -5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
+ */
+/* 
+.footer {
+  content: "";
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(29, 53, 87, 0.99);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 2rem;
+  color: aliceblue;
+  flex-wrap: wrap;
+}
+
+.footer-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-section {
+  margin-left: 2vw;
+  margin-right: 1vw;
+}
+
+.footer-title {
+  font-size: 1.3rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.policy {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.policy-btn {
+  height: 100%;
+  background: transparent;
+  border-radius: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 3px;
+  padding-right: 3px;
+  border-color: transparent;
+  font-size: 0.9rem;
+  color: white;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  width: 10rem;
+  cursor: pointer;
+  margin-right: 3px;
+}
+.policy-btn:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
+}
+
+.footer-info {
+  display: none;
+}
+.footer-center {
+  width: 90vw;
+  max-width: var(--max-width);
+}
+@media screen and (min-width: 800px) {
+  .footer-section {
+    flex: flex;
+    flex-direction: column;
+  }
+  .footer-center {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+  }
+  .footer-info {
+    display: block;
+    justify-self: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    height: 100%;
+    display: grid;
+    align-items: center;
+  }
+  .footer-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+ */
+
+.footer {
+  height: 50vh;
+  display: flex;
+  margin-top: 2rem;
+  /*  align-items: center;
+  justify-content: center; */
+  background: transparent;
+  position: relative;
+  z-index: 1;
+  background-color: rgba(29, 53, 87, 0.99);
+}
+.footer-center {
+  width: 100vw;
+  max-width: var(--max-width);
+}
+.footer-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: turquoise;
+  margin-bottom: 0.5rem;
+}
+
+.footer-content {
+  font-size: 1rem;
+  padding: 0.25rem 0.75rem;
+  border-radius: var(--radius);
+  border-color: transparent;
+  color: white;
+  background: transparent;
+  cursor: pointer;
+  transition: var(--transition);
+}
+.policy-links {
+  display: none;
+}
+.policy-links-open {
+  height: 300px;
+}
+.footer-btn {
+  height: 100%;
+  background: transparent;
+  border-radius: 30px;
+  padding: 10px;
+  border-color: transparent;
+  font-size: 1.1rem;
+  color: white;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  width: 10rem;
+  cursor: pointer;
+  margin-right: 3px;
+  margin-left: 150px;
+}
+.footer-btn:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
+}
+
+.footer-title {
+  color: black;
+}
+@media screen and (min-width: 800px) {
+  .footer {
+    margin-top: 2rem;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    position: relative;
+    z-index: 1;
+    background-color: rgba(29, 53, 87, 0.99);
+  }
+  .footer-center {
+    width: 90vw;
+    max-width: var(--max-width);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .footer-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: turquoise;
+    margin-bottom: 0.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .footer-link {
+    display: flex;
+    flex-direction: column;
+    color: violet;
+  }
+  .policy-links {
+    display: flex;
+    flex-direction: column;
+  }
+  .policy-btn {
+    height: 100%;
+    background: transparent;
+    border-radius: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-color: transparent;
+    font-size: 1.1rem;
+    color: white;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    width: 10rem;
+    cursor: pointer;
+    margin-right: 3px;
+  }
+  .policy-btn:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
+  }
+}
