--- a/src/index.css
+++ b/src/index.css
@@ -920,9 +920,25 @@ https://zurb.com/playground/motion-ui
     rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
 }
 
-.footer-title {
-  color: black;
+.footermenu.show {
+  display: block;
+  height: 30px;
 }
+
+.footermenu {
+  background: var(--clr-white);
+  box-shadow: var(--dark-shadow);
+  position: absolute;
+  top: 4rem;
+  height: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3;
+  display: none;
+  padding: 2rem;
+  border-radius: var(--radius);
+}
+
 @media screen and (min-width: 800px) {
   .footer {
     margin-top: 2rem;
