--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,9 @@ Variables
   /* --max-width: 1170px; */
   --max-width: 1400px;
   --fixed-width: 620px;
+  /* theme color */
+  --clr-red: rgb(230, 57, 70);
+  --clr-whitish: rgb(240, 248, 255);
 }
 /*
 =============== 
@@ -83,7 +86,7 @@ h4 {
 }
 h1 {
   font-size: 3rem;
-  color: rgb(230, 57, 70);
+  color: var(--clr-red);
 }
 h2 {
   font-size: 2rem;
@@ -167,16 +170,16 @@ Stripe Styles
 .logo {
   padding: 10px;
   position: relative;
-  color: aliceblue;
-  border: 2px solid rgb(230, 57, 70);
+  color: var(--clr-whitish);
+  border: 2px solid var(--clr-red);
 }
 
 .side-logo {
   padding: 10px;
   margin-right: 200px;
   position: relative;
-  color: aliceblue;
-  border: 2px solid rgb(230, 57, 70);
+  color: var(--clr-whitish);
+  border: 2px solid var(--clr-red);
 }
 
 .logo-sidebar {
@@ -575,7 +578,7 @@ Stripe Styles
 
 .guitar-sale {
   text-align: center;
-  color: aliceblue;
+  color: var(--clr-whitish);
   margin-bottom: 100px;
 }
 
@@ -586,7 +589,7 @@ Stripe Styles
   }
   .guitar-sale {
     text-align: center;
-    color: aliceblue;
+    color: var(--clr-whitish);
     margin-bottom: 100px;
   }
   .guitar-section {
@@ -601,73 +604,14 @@ Stripe Styles
   }
   .guitar-sale {
     text-align: center;
-    color: aliceblue;
+    color: var(--clr-whitish);
     margin-bottom: 100px;
   }
   .guitar-section {
     height: 52vh;
   }
 }
-/* 
-@media screen and (max-width: 1024px) {
-  .guitars {
-    width: 190%;
-    margin-left: 25px;
-  }
-  .guitar-sale {
-    text-align: center;
-    color: aliceblue;
-    margin-bottom: 100px;
-  }
-  .guitar-section {
-    height: 68vh;
-  }
-}
 
-@media screen and (max-width: 800px) {
-  .guitars {
-    width: 190%;
-    margin-left: 25px;
-  }
-  .guitar-sale {
-    text-align: center;
-    color: aliceblue;
-    margin-bottom: 100px;
-  }
-  .guitar-section {
-    height: 60vh;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .guitars {
-    width: 190%;
-    margin-left: 25px;
-  }
-  .guitar-sale {
-    text-align: center;
-    color: aliceblue;
-    margin-bottom: 100px;
-  }
-  .guitar-section {
-    height: 56vh;
-  }
-}
-@media screen and (max-width: 480px) {
-  .guitars {
-    width: 190%;
-    margin-left: 25px;
-  }
-  .guitar-sale {
-    text-align: center;
-    color: aliceblue;
-    margin-bottom: 100px;
-  }
-  .guitar-section {
-    height: 53vh;
-  }
-}
- */
 .slick-prev {
   left: -52px !important;
 }
@@ -712,19 +656,6 @@ https://www.w3schools.com/cssref/css3_pr_resize.asp
 https://stackoverflow.com/questions/19213712/my-website-mess-up-with-browser-resize
 */
 
-/* 
-@media screen and (max-width: 480px) {
- .post-section {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  margin-top: 5rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-} */
-
 .stand-up {
   animation-name: guitar-stand-up;
 }
@@ -748,201 +679,91 @@ https://github.com/foundation/motion-ui/blob/master/docs/animations.md
 https://zurb.com/playground/motion-ui
 */
 
-/* Footer!!!!!!! */
-/* 
-.footer-section {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  margin-top: -5rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-items: center;
-}
- */
-/* 
+/* footer section */
 .footer {
-  content: "";
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
+  width: 100vw;
+
+  margin: 5rem auto;
   background-color: rgba(29, 53, 87, 0.99);
-  background-size: cover;
-  background-repeat: no-repeat;
-  z-index: -1;
+  padding: 2.5rem 2rem;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding-top: 2rem;
-  color: aliceblue;
-  flex-wrap: wrap;
 }
-
-.footer-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-section {
-  margin-left: 2vw;
-  margin-right: 1vw;
-}
-
-.footer-title {
-  font-size: 1.3rem;
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-.policy {
+.footer-mobile-show {
+  width: 80vw;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
 }
 
-.policy-btn {
+.footer-each-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  margin-bottom: 2rem;
+  padding: 2rem;
+}
+
+.disabled {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  cursor: not-allowed;
+  pointer-events: none;
+  background: transparent;
+  border: none;
+  color: var(--clr-whitish);
+  font-size: large;
+  margin-left: 1.5rem;
+  line-height: 2;
+}
+.policy-mobile--btn {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   background: transparent;
   border-radius: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 3px;
-  padding-right: 3px;
+  margin-right: 1rem;
+  margin-left: 1.5rem;
   border-color: transparent;
-  font-size: 0.9rem;
-  color: white;
+  font-size: 1.1rem;
+  color: var(--clr-whitish);
   text-transform: capitalize;
   letter-spacing: 1px;
   width: 10rem;
   cursor: pointer;
-  margin-right: 3px;
 }
-.policy-btn:hover {
+.policy-mobile--btn:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
-}
-
-.footer-info {
-  display: none;
-}
-.footer-center {
-  width: 90vw;
-  max-width: var(--max-width);
-}
-@media screen and (min-width: 800px) {
-  .footer-section {
-    flex: flex;
-    flex-direction: column;
-  }
-  .footer-center {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    align-items: center;
-  }
-  .footer-info {
-    display: block;
-    justify-self: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    text-align: center;
-    height: 100%;
-    display: grid;
-    align-items: center;
-  }
-  .footer-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
- */
-
-.footer {
-  height: 50vh;
-  display: flex;
-  margin-top: 2rem;
-  /*  align-items: center;
-  justify-content: center; */
-  background: transparent;
-  position: relative;
-  z-index: 1;
-  background-color: rgba(29, 53, 87, 0.99);
-}
-.footer-center {
-  width: 100vw;
-  max-width: var(--max-width);
+  padding: 1rem 0.5rem;
 }
 .footer-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  background-color: turquoise;
-  margin-bottom: 0.5rem;
+  display: none;
 }
 
-.footer-content {
+.footer-title {
+  color: var(--clr-red);
+}
+.foo-btn {
   font-size: 1rem;
   padding: 0.25rem 0.75rem;
   border-radius: var(--radius);
   border-color: transparent;
-  color: white;
+  color: var(--clr-whitish);
   background: transparent;
   cursor: pointer;
   transition: var(--transition);
-}
-.policy-links {
-  display: none;
-}
-.policy-links-open {
-  height: 300px;
-}
-.footer-btn {
-  height: 100%;
-  background: transparent;
-  border-radius: 30px;
-  padding: 10px;
-  border-color: transparent;
-  font-size: 1.1rem;
-  color: white;
-  text-transform: capitalize;
-  letter-spacing: 1px;
-  width: 10rem;
-  cursor: pointer;
-  margin-right: 3px;
-  margin-left: 150px;
-}
-.footer-btn:hover {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
-}
-
-.footermenu.show {
-  display: block;
-  height: 30px;
-}
-
-.footermenu {
-  background: var(--clr-white);
-  box-shadow: var(--dark-shadow);
-  position: absolute;
-  top: 4rem;
-  height: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 3;
-  display: none;
-  padding: 2rem;
-  border-radius: var(--radius);
 }
 
 @media screen and (min-width: 800px) {
   .footer {
     margin-top: 2rem;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -961,18 +782,17 @@ https://zurb.com/playground/motion-ui
   .footer-header {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
-    background-color: turquoise;
     margin-bottom: 0.5rem;
     padding-left: 2rem;
     padding-right: 2rem;
   }
-  .footer-link {
+  /*   .footer-link {
     display: flex;
     flex-direction: column;
     color: violet;
-  }
+  } */
   .policy-links {
     display: flex;
     flex-direction: column;
@@ -981,8 +801,7 @@ https://zurb.com/playground/motion-ui
     height: 100%;
     background: transparent;
     border-radius: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin: 0.8rem 1rem;
     border-color: transparent;
     font-size: 1.1rem;
     color: white;
@@ -990,11 +809,26 @@ https://zurb.com/playground/motion-ui
     letter-spacing: 1px;
     width: 10rem;
     cursor: pointer;
-    margin-right: 3px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   }
   .policy-btn:hover {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-      rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
+      rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset; */
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin: 10px;
+    padding: 5px;
+  }
+  .footer-mobile-show {
+    display: none;
+  }
+  .hours {
+    color: var(--clr-whitish);
+  }
+  .holiday {
+    color: var(--clr-red);
   }
 }
