--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ Variables
   /* theme color */
   --clr-red: rgb(230, 57, 70);
   --clr-whitish: rgb(240, 248, 255);
+  --crl--blue: rgba(29, 53, 87, 0.99);
 }
 /*
 =============== 
@@ -67,7 +68,7 @@ body {
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 ul {
   list-style-type: none;
@@ -95,7 +96,7 @@ h3 {
   font-size: 1.25rem;
 }
 h4 {
-  font-size: 0.875rem;
+  font-size: 1.2rem;
 }
 p {
   margin-bottom: 1.25rem;
@@ -112,7 +113,7 @@ p {
     font-size: 1.75rem;
   }
   h4 {
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
   body {
     font-size: 1rem;
@@ -231,7 +232,7 @@ Stripe Styles
   height: 100vh;
   top: 0;
   left: 0;
-  background-color: rgba(29, 53, 87, 0.99);
+  background-color: var(--crl--blue);
   /* background: url(./image/hero.svg); */
   background-size: cover;
   background-repeat: no-repeat;
@@ -569,7 +570,7 @@ Stripe Styles
   height: 65vh;
   top: 0;
   left: 0;
-  background-color: rgba(29, 53, 87, 0.99);
+  background-color: var(--crl--blue);
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -1;
@@ -681,10 +682,9 @@ https://zurb.com/playground/motion-ui
 
 /* footer section */
 .footer {
-  width: 100vw;
-
+  width: auto;
   margin: 5rem auto;
-  background-color: rgba(29, 53, 87, 0.99);
+  background-color: var(--crl--blue);
   padding: 2.5rem 2rem;
   display: flex;
 }
@@ -759,6 +759,7 @@ https://zurb.com/playground/motion-ui
   cursor: pointer;
   transition: var(--transition);
 }
+/* footer section  full-window*/
 
 @media screen and (min-width: 800px) {
   .footer {
@@ -770,7 +771,7 @@ https://zurb.com/playground/motion-ui
     background: transparent;
     position: relative;
     z-index: 1;
-    background-color: rgba(29, 53, 87, 0.99);
+    background-color: var(--crl--blue);
   }
   .footer-center {
     width: 90vw;
@@ -813,9 +814,6 @@ https://zurb.com/playground/motion-ui
       rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   }
   .policy-btn:hover {
-    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-      rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset; */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -833,6 +831,80 @@ https://zurb.com/playground/motion-ui
   }
 }
 
+/* FAQ */
+.faq-hero::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  top: 0;
+  left: 0;
+  background-color: var(--crl--blue);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.faq-hero {
+  position: relative;
+  width: 100%;
+  margin-top: -5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
 .faq-info {
   margin-top: 13rem;
+}
+.faq-main-title {
+  margin-bottom: 3.5rem;
+  color: var(--clr-red);
+}
+.faq {
+  margin-bottom: 2rem;
+}
+
+.faq-title {
+  color: var(--crl--blue);
+}
+
+/* newsletter section */
+
+.newsletter-container {
+  width: 90vw;
+  text-align: center;
+  background: #e5989b;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.newsletter-title {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.newsletter-input {
+  width: 25vw;
+  font-size: 1rem;
+  margin: 1rem;
+  padding: 0.25rem 0.75rem;
+  border-radius: var(--radius);
+  border-color: transparent;
+  color: white;
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.newsletter-btn {
+  font-size: 1rem;
+  margin: 1rem;
+  padding: 0.25rem 0.75rem;
+  border-radius: var(--radius);
+  border-color: transparent;
+  color: white;
+  background: var(--crl--blue);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.newsletter-btn:hover {
+  background: var(--clr-grey-5);
 }
