--- a/src/index.css
+++ b/src/index.css
@@ -866,20 +866,22 @@ https://zurb.com/playground/motion-ui
 /**************** newsletter section *****************/
 
 .newsletter-container {
-  width: 90vw;
+  width: 80vw;
   text-align: center;
   background: #e5989b;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  margin-left: 10vw;
 }
 
-.newsletter-title {
+.newsletter-title,
+.newsletter-text {
   margin-left: 2rem;
   margin-right: 2rem;
 }
 
 .newsletter-input {
-  width: 25vw;
+  width: 30vw;
   font-size: 1rem;
   margin: 1rem;
   padding: 0.25rem 0.75rem;
@@ -903,4 +905,93 @@ https://zurb.com/playground/motion-ui
 }
 .newsletter-btn:hover {
   background: var(--clr-grey-5);
+}
+
+/********** contact section *********/
+.contact-page::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 105%;
+  top: 0;
+  left: 0;
+  background-color: var(--crl--blue);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.contact-page {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  margin-top: -5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  margin-bottom: 4rem;
+}
+.contact-info {
+  margin-top: 15rem;
+  margin-left: 3rem;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  padding: 0.65rem;
+  color: var(--clr-red);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.input {
+  padding: 0.525rem;
+  margin-bottom: 0.5rem;
+  background: var(--clr-whitish);
+  border: none;
+  border-radius: 0.3rem;
+}
+
+.contact-btn {
+  background: transparent;
+  border-radius: 30px;
+  border-color: transparent;
+  font-size: 1.1rem;
+  color: white;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  cursor: pointer;
+  padding: 3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(69, 123, 157, 0.35) 0px -2px 6px 0px inset;
+}
+
+@media screen and (min-width: 800px) {
+  .contact-page::before {
+    height: 100%;
+  }
+
+  .contact {
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
+  .contact-form {
+    margin-bottom: -10rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact {
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    padding-bottom: 12vh;
+  }
 }
