--- a/src/index.css
+++ b/src/index.css
@@ -980,7 +980,7 @@ https://zurb.com/playground/motion-ui
   }
 
   .contact {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 4fr;
     align-items: center;
   }
   .contact-form {
@@ -990,7 +990,68 @@ https://zurb.com/playground/motion-ui
 
 @media screen and (min-width: 1200px) {
   .contact {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 4fr;
+    align-items: center;
+    padding-bottom: 12vh;
+  }
+}
+
+/************* Products  ************/
+
+.products-page::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 105%;
+  top: 0;
+  left: 0;
+  background-color: var(--crl--blue);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.products-page {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  margin-top: -5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  margin-bottom: 4rem;
+}
+
+.guitar-category {
+  border: 2px solid pink;
+}
+
+.guitar-brand {
+  border: 2px solid green;
+  margin: 2rem;
+}
+
+.guitar-color {
+  border: 2px solid yellow;
+  margin: 2rem;
+}
+
+@media screen and (min-width: 800px) {
+  .products-page::before {
+    height: 100%;
+  }
+
+  .products {
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+  }
+  .contact-form {
+    margin-bottom: -10rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .products {
+    grid-template-columns: 1fr 2fr;
     align-items: center;
     padding-bottom: 12vh;
   }
