--- a/src/index.css
+++ b/src/index.css
@@ -871,7 +871,7 @@ https://zurb.com/playground/motion-ui
   background: #e5989b;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  margin-left: 10vw;
+  margin-left: 8vw;
 }
 
 .newsletter-title,
@@ -1020,9 +1020,16 @@ https://zurb.com/playground/motion-ui
   justify-items: center;
   margin-bottom: 4rem;
 }
-
+.guitar-info {
+  margin-top: 15rem;
+  margin-left: 3rem;
+  display: flex;
+  align-self: flex-start;
+}
 .guitar-category {
   border: 2px solid pink;
+  display: flex;
+  flex-direction: column;
 }
 
 .guitar-brand {
@@ -1033,6 +1040,27 @@ https://zurb.com/playground/motion-ui
 .guitar-color {
   border: 2px solid yellow;
   margin: 2rem;
+}
+
+.category {
+  color: var(--clr-red);
+  text-align: center;
+}
+
+.category-btns {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+}
+
+.category-btn {
+  margin-bottom: 0.5rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  background: transparent;
+  color: var(--clr-whitish);
+  align-content: center;
+  font-size: large;
 }
 
 .guitar-intro-products {
@@ -1051,6 +1079,8 @@ https://zurb.com/playground/motion-ui
 }
 
 .guitar-intro-name {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   font-size: medium;
   color: #e5989b;
 }
@@ -1061,6 +1091,10 @@ https://zurb.com/playground/motion-ui
 .guitar-intro-pics {
   width: 90%;
   margin-bottom: 0.6rem;
+}
+
+.guitar-intro-price {
+  color: var(--clr-whitish);
 }
 
 @media screen and (min-width: 800px) {
@@ -1088,4 +1122,13 @@ https://zurb.com/playground/motion-ui
     align-items: center;
     padding-bottom: 12vh;
   }
+}
+
+/* searchbox */
+
+.search-box {
+  margin: 2rem;
+  padding-top: 1.5rem;
+  padding-left: 2rem;
+  font-size: large;
 }
