--- a/src/index.css
+++ b/src/index.css
@@ -413,7 +413,7 @@ Stripe Styles
   width: 90vw;
   height: 95vh;
   max-width: var(--fixed-width);
-  background: rgba(69, 123, 157, 0.9);
+  background: currentColor;
 
   border-radius: var(--radius);
   box-shadow: var(--dark-shadow);
@@ -441,7 +441,7 @@ Stripe Styles
 }
 .sidebar-btn {
   padding: 10px;
-  background-color: rgb(69, 123, 157);
+  background-color: cadetblue;
   box-shadow: rgba(69, 123, 157, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -1051,18 +1051,21 @@ https://zurb.com/playground/motion-ui
   align-self: flex-start;
 }
 .guitar-category {
-  border: 2px solid pink;
+  /*   border: 2px solid pink;
+ */
   display: flex;
   flex-direction: column;
 }
 
 .guitar-brand {
-  border: 2px solid green;
+  /*   border: 2px solid green;
+ */
   margin: 2rem;
 }
 
 .guitar-color {
-  border: 2px solid yellow;
+  /*   border: 2px solid yellow;
+ */
   margin: 2rem;
 }
 
@@ -1074,13 +1077,28 @@ https://zurb.com/playground/motion-ui
 .category-btns {
   display: flex;
   flex-direction: column;
-  margin: 2rem;
+  margin: 0.3rem;
 }
 
 .category-btn {
   margin-bottom: 0.5rem;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.3rem;
+  background: transparent;
+  color: var(--clr-whitish);
+  align-content: center;
+  font-size: large;
+}
+
+.category-btns-color {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0.3rem;
+}
+.category-btn-color {
+  margin: 0.5rem;
+  padding: 0.7rem;
   background: transparent;
   color: var(--clr-whitish);
   align-content: center;
@@ -1090,7 +1108,8 @@ https://zurb.com/playground/motion-ui
 .guitar-intro-products {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border: 2px solid purple;
+  /*   border: 2px solid purple;
+ */
   text-align: center;
 }
 
@@ -1098,8 +1117,14 @@ https://zurb.com/playground/motion-ui
   background-color: rosybrown;
 }
 
-.guitar-intro-each {
+/* .guitar-intro-each {
   border: 2px solid red;
+} */
+
+.guitar-intro-each:hover {
+  transform: scale(1.05, 1.05);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: transparent;
 }
 
 .guitar-intro-name {
@@ -1129,11 +1154,12 @@ https://zurb.com/playground/motion-ui
 
 .pination-li {
   color: #e5989b;
-  border: 2px solid green;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: bold;
-  margin-top: 2rem;
+  margin-top: 1.7rem;
+  margin-bottom: 0.3rem;
   padding: 1.3rem;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 800px) {
@@ -1150,12 +1176,42 @@ https://zurb.com/playground/motion-ui
     margin-top: 25rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    border: 2px solid purple;
     text-align: center;
   }
   .pination-nav {
     margin-left: 23rem;
     margin-top: -2rem;
+  }
+  .category-btns {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+  }
+
+  .category-btn {
+    margin-bottom: 0.5rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    background: transparent;
+    color: var(--clr-whitish);
+    align-content: center;
+    font-size: large;
+    cursor: pointer;
+  }
+  .category-btns-color {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+  }
+  .category-btn-color {
+    margin-bottom: 0.5rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    background: transparent;
+    color: var(--clr-whitish);
+    align-content: center;
+    font-size: large;
+    cursor: pointer;
   }
 }
 
