--- a/src/Product/products-style.css
+++ b/src/Product/products-style.css
@@ -194,7 +194,8 @@
 /* check */
 .guitar-intro-each {
   justify-content: center;
-  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-top: 1rem;
 }
 
 .guitar-intro-each:hover {
