--- a/src/Product/products-style.css
+++ b/src/Product/products-style.css
@@ -22,25 +22,21 @@
   margin-bottom: 4rem;
 }
 
-.hero-center {
+.product-hero-center {
   width: 100%;
   max-width: var(--max-width);
   display: grid;
   align-items: center;
 }
 
-.hero-info h1 {
+.product-hero-info h1 {
   text-transform: uppercase;
   max-width: 500px;
   margin-bottom: 2rem;
 }
-.hero-info p {
+.product-hero-info p {
   max-width: 35em;
   line-height: 1.8;
-}
-.hero-images {
-  display: none;
-  margin-top: 1.5rem;
 }
 
 .guitar-info {
@@ -102,7 +98,7 @@
   .products-page::before {
     height: 100%;
   }
-  .hero-center {
+  .product-hero-center {
     grid-template-columns: 1fr 2fr;
   }
   /*  .products {
@@ -149,7 +145,7 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-center {
+  .product-hero-center {
     grid-template-columns: 1fr 2fr;
     align-items: end;
     padding-bottom: 12vh;
@@ -162,13 +158,15 @@
 }
 
 @media screen and (min-width: 1400px) {
-  .hero-center {
+  .product-hero-center {
     padding-bottom: 20vh;
-  }
-  .hero-center {
     grid-template-columns: 1fr 2fr;
     padding-right: 20px;
   }
+  /* .hero-center {
+    grid-template-columns: 1fr 2fr;
+    padding-right: 20px;
+  } */
   /*  .products {
     margin-left: 2rem;
     grid-template-columns: 1fr 3fr;
