--- a/src/Contact/contact-style.css
+++ b/src/Contact/contact-style.css
@@ -16,12 +16,12 @@
   min-height: 100vh;
   margin-top: -5rem;
   display: grid;
-  grid-template-columns: 1fr;
+  /* grid-template-columns: 1fr; */
   justify-items: center;
   margin-bottom: 4rem;
 }
 
-.hero-center {
+.contact-hero-center {
   width: 90vw;
   max-width: var(--max-width);
   display: grid;
@@ -90,13 +90,20 @@
   .contact-page::before {
     height: 100%;
   }
-  .hero-center {
-    grid-template-columns: 2fr 1fr;
+  /* .hero-center {
+  width: 90vw;
+  max-width: var(--max-width);
+  display: grid;
+  align-items: center;
+} */
+
+  .contact-hero-center {
+    grid-template-columns: 1fr 1fr;
   }
-  .contact {
+  /*  .contact {
     grid-template-columns: 1fr 4fr;
     align-items: center;
-  }
+  } */
   .hero-info h1 {
     font-size: 3rem;
   }
@@ -104,21 +111,34 @@
     font-size: 1.25rem;
   }
   .contact-form {
-    margin-bottom: -10rem;
+    /* margin-bottom: -0rem; */
+    margin-top: -5rem;
+    margin-left: -6rem;
   }
+
+  /*   .contact-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  padding: 0.65rem;
+  color: var(--clr-red);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+} */
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-center {
+  /*  .hero-center {
     grid-template-columns: 2fr 1fr;
     align-items: end;
     padding-bottom: 12vh;
-  }
-  .contact {
+  } */
+  /* .contact {
     grid-template-columns: 1fr 4fr;
     align-items: center;
     padding-bottom: 12vh;
-  }
+  } */
   .hero-info h1 {
     max-width: 100%;
     font-size: 5.5rem;
@@ -126,7 +146,7 @@
 }
 
 @media screen and (min-width: 1400px) {
-  .hero-center {
+  /*  .hero-center {
     padding-bottom: 20vh;
-  }
+  } */
 }
